Replace Wiki update page operation with Gitaly RPC
In this commit we're introducing a new functionality behind
a feature flag. We're replacing the old wiki page update operation
to avoid gollum and use regular Gitaly RPC.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -20500,6 +20500,9 @@ msgstr ""
 msgid "Invalid file."
 msgstr ""
 
+msgid "Invalid format selected"
+msgstr ""
+
 msgid "Invalid hash"
 msgstr ""
 
