--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -2676,6 +2676,9 @@ msgstr ""
 msgid "AdminSettings|Maximum number of DAG dependencies that a job can have"
 msgstr ""
 
+msgid "AdminSettings|Maximum number of active pipelines per project"
+msgstr ""
+
 msgid "AdminSettings|Maximum number of jobs in a single pipeline"
 msgstr ""
 
