--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -15413,6 +15413,9 @@ msgstr ""
 msgid "Failed to load"
 msgstr ""
 
+msgid "Failed to load Roadmap"
+msgstr ""
+
 msgid "Failed to load assignees."
 msgstr ""
 
