Display the tier of the environment on page
Environments fall into one of 5 tiers:

- production
- staging
- development
- testing
- other

Displaying the tier helps a user to categorize their environments at a
glance.

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -14395,6 +14395,9 @@ msgstr ""
 msgid "Environment|Auto stop %{time}"
 msgstr ""
 
+msgid "Environment|Deployment tier"
+msgstr ""
+
 msgid "Epic"
 msgstr ""
 
