Add polling for commit pipeline status
Change icon to a vue app and use
polling to keep status in sync with
pipelines on commit.

Changelog: fixed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -37990,6 +37990,9 @@ msgstr ""
 msgid "There was a problem fetching the keep latest artifacts setting."
 msgstr ""
 
+msgid "There was a problem fetching the latest pipeline status."
+msgstr ""
+
 msgid "There was a problem fetching the pipeline stages."
 msgstr ""
 
