--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12460,6 +12460,9 @@ msgstr ""
 msgid "Deployment Frequency"
 msgstr ""
 
+msgid "Deployment Target|Learn more about the %{linkStart}GitLab - Kubernetes integrations%{linkEnd}."
+msgstr ""
+
 msgid "Deployment Target|Project deployment target (optional)"
 msgstr ""
 
