--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -8763,9 +8763,6 @@ msgstr ""
 msgid "ClusterIntegration|The URL used to access the Kubernetes API."
 msgstr ""
 
-msgid "ClusterIntegration|The certificate-based cluster connection method has been %{issue_link_start}deprecated%{issue_link_end}. We recommend using %{docs_link_start}the GitLab agent for Kubernetes%{docs_link_end} instead."
-msgstr ""
-
 msgid "ClusterIntegration|The certificate-based method to connect clusters to GitLab was %{linkStart}deprecated%{linkEnd} in GitLab 14.5."
 msgstr ""
 
@@ -8791,6 +8788,9 @@ msgid "ClusterIntegration|This is necessary to clear existing environment-namesp
 msgstr ""
 
 msgid "ClusterIntegration|This option will allow you to install applications on RBAC clusters."
+msgstr ""
+
+msgid "ClusterIntegration|This process is %{issue_link_start}deprecated%{issue_link_end}. Use the %{docs_link_start}the GitLab agent for Kubernetes%{docs_link_end} instead."
 msgstr ""
 
 msgid "ClusterIntegration|This project does not have billing enabled. To create a cluster, %{linkToBillingStart}enable billing%{linkToBillingEnd} and try again."
