--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12460,7 +12460,7 @@ msgstr ""
 msgid "Deployment Frequency"
 msgstr ""
 
-msgid "Deployment Target|Learn more about the %{linkStart}GitLab - Kubernetes integrations%{linkEnd}."
+msgid "Deployment Target|%{linkStart}How to provision or deploy to Kubernetes clusters from GitLab?%{linkEnd}"
 msgstr ""
 
 msgid "Deployment Target|Project deployment target (optional)"
