Show UsageData buttons only if cache exists
Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -652,6 +652,9 @@ msgstr ""
 msgid "%{emailPrefix}@company.com"
 msgstr ""
 
+msgid "%{enable_service_ping_link_start}Enable%{link_end} or %{generate_manually_link_start}generate%{link_end} Service Ping to preview and download service usage data payload."
+msgstr ""
+
 msgid "%{extra} more downstream pipelines"
 msgstr ""
 
