--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7882,10 +7882,10 @@ msgstr ""
 msgid "ClusterAgents|All"
 msgstr ""
 
-msgid "ClusterAgents|An error occurred while loading your Agents"
+msgid "ClusterAgents|An error occurred while loading your agent"
 msgstr ""
 
-msgid "ClusterAgents|An error occurred while loading your agent"
+msgid "ClusterAgents|An error occurred while loading your agents"
 msgstr ""
 
 msgid "ClusterAgents|An error occurred while retrieving GitLab Agent activity. Reload the page to try again."
@@ -7916,12 +7916,6 @@ msgid "ClusterAgents|Connect a cluster (certificate - deprecated)"
 msgstr ""
 
 msgid "ClusterAgents|Connect a cluster (deprecated)"
-msgstr ""
-
-msgid "ClusterAgents|Connect existing cluster"
-msgstr ""
-
-msgid "ClusterAgents|Connect with the GitLab Agent"
 msgstr ""
 
 msgid "ClusterAgents|Connected"
@@ -7990,10 +7984,10 @@ msgstr ""
 msgid "ClusterAgents|From a terminal, connect to your cluster and run this command. The token is included."
 msgstr ""
 
-msgid "ClusterAgents|GitLab Agent"
+msgid "ClusterAgents|GitLab agent"
 msgstr ""
 
-msgid "ClusterAgents|GitLab Agent for Kubernetes"
+msgid "ClusterAgents|GitLab agent for Kubernetes"
 msgstr ""
 
 msgid "ClusterAgents|Give feedback"
@@ -8003,9 +7997,6 @@ msgid "ClusterAgents|How do I register an agent?"
 msgstr ""
 
 msgid "ClusterAgents|How to update an agent?"
-msgstr ""
-
-msgid "ClusterAgents|Install a new agent"
 msgstr ""
 
 msgid "ClusterAgents|Last connected %{timeAgo}."
@@ -8053,13 +8044,7 @@ msgstr ""
 msgid "ClusterAgents|Requires a Maintainer or greater role to delete agents"
 msgstr ""
 
-msgid "ClusterAgents|Requires a Maintainer or greater role to install new agents"
-msgstr ""
-
 msgid "ClusterAgents|Requires a Maintainer or greater role to perform these actions"
-msgstr ""
-
-msgid "ClusterAgents|Requires a maintainer or greater role to connect existing clusters"
 msgstr ""
 
 msgid "ClusterAgents|Security"
@@ -8074,7 +8059,7 @@ msgstr ""
 msgid "ClusterAgents|Tell us what you think"
 msgstr ""
 
-msgid "ClusterAgents|The GitLab Agent provides an increased level of security when connecting Kubernetes clusters to GitLab. %{linkStart}Learn more about the GitLab Agent.%{linkEnd}"
+msgid "ClusterAgents|The GitLab agent provides an increased level of security when connecting Kubernetes clusters to GitLab. %{linkStart}Learn more about the GitLab agent.%{linkEnd}"
 msgstr ""
 
 msgid "ClusterAgents|The agent has not been connected in a long time. There might be a connectivity issue. Last contact was %{timeAgo}."
@@ -8272,9 +8257,6 @@ msgid "ClusterIntegration|Clusters are utilized by selecting the nearest ancesto
 msgstr ""
 
 msgid "ClusterIntegration|Connect a Kubernetes cluster"
-msgstr ""
-
-msgid "ClusterIntegration|Connect with a certificate"
 msgstr ""
 
 msgid "ClusterIntegration|Connect your cluster to GitLab through %{linkStart}cluster certificates%{linkEnd}."
@@ -8823,7 +8805,7 @@ msgstr ""
 msgid "ClusterIntegration|Use GitLab to deploy to your cluster, run jobs, use review apps, and more."
 msgstr ""
 
-msgid "ClusterIntegration|Use the %{linkStart}GitLab Agent%{linkEnd} to safely connect your Kubernetes clusters to GitLab. You can deploy your applications, run your pipelines, use Review Apps, and much more."
+msgid "ClusterIntegration|Use the %{linkStart}GitLab agent%{linkEnd} to safely connect your Kubernetes clusters to GitLab. You can deploy your applications, run your pipelines, use Review Apps, and much more."
 msgstr ""
 
 msgid "ClusterIntegration|Uses the Cloud Run, Istio, and HTTP Load Balancing addons for this cluster."
