Polish jira_connect users UI
- Fix nav bar not rendering theme properly.
- Add avatar to user link.
- Adjust headings, margins and spacing of elements.
- Update margin between text and icon in external_link
helper.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -20369,9 +20369,6 @@ msgstr ""
 msgid "Integrations|You can close this window."
 msgstr ""
 
-msgid "Integrations|You can now close this window and return to the GitLab for Jira application."
-msgstr ""
-
 msgid "Integrations|You can use this alias in your Slack commands"
 msgstr ""
 
@@ -21504,6 +21501,9 @@ msgid "JiraService|Work on Jira issues without leaving GitLab. Add a Jira menu t
 msgstr ""
 
 msgid "JiraService|Work on Jira issues without leaving GitLab. Add a Jira menu to access a read-only list of your Jira issues. %{jira_issues_link_start}Learn more.%{link_end}"
+msgstr ""
+
+msgid "JiraService|You can now close this window and%{br}return to the GitLab for Jira application."
 msgstr ""
 
 msgid "JiraService|You must configure Jira before enabling this integration. %{jira_doc_link_start}Learn more.%{link_end}"
@@ -42820,7 +42820,7 @@ msgstr ""
 msgid "You are receiving this message because you are a GitLab administrator for %{url}."
 msgstr ""
 
-msgid "You are signed in to GitLab as %{user_link}"
+msgid "You are signed in to GitLab as:"
 msgstr ""
 
 msgid "You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico."
