Add heading to work item detail modal
Add heading to be consistent with create work item modal

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -42655,6 +42655,9 @@ msgstr ""
 msgid "WorkItem|Type"
 msgstr ""
 
+msgid "WorkItem|Work Item"
+msgstr ""
+
 msgid "WorkItem|Work Items"
 msgstr ""
 
