--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7029,6 +7029,9 @@ msgstr ""
 msgid "Changed assignee(s)."
 msgstr ""
 
+msgid "Changed merge method to %{merge_method}"
+msgstr ""
+
 msgid "Changed reviewer(s)."
 msgstr ""
 
