Change button label
Rename button to associate
action to Changes tab

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9127,9 +9127,6 @@ msgstr ""
 msgid "Committed by"
 msgstr ""
 
-msgid "Commit…"
-msgstr ""
-
 msgid "Community forum"
 msgstr ""
 
@@ -10463,6 +10460,9 @@ msgid "Create branch"
 msgstr ""
 
 msgid "Create commit"
+msgstr ""
+
+msgid "Create commit..."
 msgstr ""
 
 msgid "Create common files more quickly, and standardize their format."
