Migrate account limits checkboxes
Migrate the checkboxes to use
gitlab ui styles.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -41248,7 +41248,7 @@ msgstr ""
 msgid "Users can launch a development environment from a GitLab browser tab when the %{linkStart}Gitpod%{linkEnd} integration is enabled."
 msgstr ""
 
-msgid "Users can reactivate their account by signing in."
+msgid "Users can reactivate their account by signing in. %{link_start}Learn more%{link_end}"
 msgstr ""
 
 msgid "Users can render diagrams in AsciiDoc, Markdown, reStructuredText, and Textile documents using Kroki."
