--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -15451,6 +15451,9 @@ msgstr ""
 msgid "Failed to load groups, users and deploy keys."
 msgstr ""
 
+msgid "Failed to load iteration cadences."
+msgstr ""
+
 msgid "Failed to load iterations."
 msgstr ""
 
