Add more verbose error message if 2FA required
The previous message was just "2FA required." Let's do more here, and
say it's an authentication failure. Explain why, and let's see if
we can't also garden in a link to the docs for how to do this.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -5260,6 +5260,9 @@ msgstr ""
 msgid "Authentication Log"
 msgstr ""
 
+msgid "Authentication error: enable 2FA in your profile settings to continue using GitLab: %{mfa_help_page}"
+msgstr ""
+
 msgid "Authentication failed: %{error_message}"
 msgstr ""
 
