Include inherited group links on group members page
Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -23505,6 +23505,9 @@ msgstr ""
 msgid "Members|Expiration date updated successfully."
 msgstr ""
 
+msgid "Members|Filter groups"
+msgstr ""
+
 msgid "Members|Filter members"
 msgstr ""
 
