Add additional tracking for billings page

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7348,6 +7348,9 @@ msgstr ""
 msgid "Checkout|Subtotal"
 msgstr ""
 
+msgid "Checkout|Success: subscription"
+msgstr ""
+
 msgid "Checkout|Tax"
 msgstr ""
 
